--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,5 @@
 requests==2.31.0
 beautifulsoup4==4.12.2
-openai==1.3.0
-notion-client==2.0.0
-schedule==1.2.0
+feedparser==6.0.10
+python-dateutil==2.8.2
 python-dotenv==1.0.0
-pandas==2.2.0
-openpyxl==3.1.2 
